--- a/slides/chapter-6-two-means.Rmd
+++ b/slides/chapter-6-two-means.Rmd
@@ -649,3 +649,12 @@ If the validity conditions hold, you can use the guideline that if $t > 2$, then
 
 ---
 ## Factors Affecting the Width of a CI
+
+- size of $n_1$ and $n_2$
+  - If $N = n_1 + n_2$ is constant, the difference between $n_1$ and $n_2$
+    - the more balanced, the smaller the margin of error (all else equal)
+  - Higher $N$ = smaller margin of error
+
+- variability of group 1 and/or group 2
+
+- multiplier
