--- a/handouts/template.tex
+++ b/handouts/template.tex
@@ -318,28 +318,41 @@ $if(block-headings)$
 \fi
 $endif$
 $endif$
+
+\usepackage{nameref}
+\makeatletter
+\newcommand*{\currentname}{\@currentlabelname}
+\makeatother
+
+\makeatletter
+\newcommand*{\longanswer}[2][4em]{%
+\begin{minipage}[c][#1]{\linewidth}\vfil #2\vfil\end{minipage}}
+\makeatother
+
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\usepackage{lastpage}
+\setlength{\headheight}{15pt}
+\renewcommand{\headrulewidth}{0.3pt}
+\renewcommand{\footrulewidth}{0.3pt}
+\lhead{\small $title$}
+\rhead{}
+\lfoot{\small \currentname}
+\rfoot{\small \thepage/\pageref*{LastPage}}
+
+\fancypagestyle{firststyle}
+{
+\renewcommand{\headrulewidth}{0.3pt}%
+\lfoot{\small\currentname}
+\cfoot{}
+\rfoot{\small\thepage/\pageref*{LastPage}}
+}
+
 $if(pagestyle)$
 \pagestyle{$pagestyle$}
 $endif$
-\usepackage{fancyhdr}
-\usepackage{lastpage}
 
-\fancypagestyle{plain}{
-\renewcommand{\headrulewidth}{0in}
-\fancyhf{}
-
-\renewcommand{\footrulewidth}{.1em}
-$if(title)$\lfoot{$title$}$endif$
-\rfoot{\footnotesize Page \thepage\, of \, \pageref*{LastPage}}
-\setlength\footskip{0in}
-}
-\fancypagestyle{firststyle}
-{
-   \fancyhf{}
-\rfoot{\footnotesize Page \thepage\, of \, \pageref*{LastPage}}
-}
-
-\pagestyle{plain}
 $for(header-includes)$
 $header-includes$
 $endfor$
@@ -425,7 +438,6 @@ $endif$
 } \makeatother
 
 \begin{document}
-\thispagestyle{firststyle}
 $if(has-frontmatter)$
 \frontmatter
 $endif$
