Show keys, include params argument in each Rmd file but  only compile a key if it's used.

--- a/handouts/00_P_Introduction_and_Syllabus.Rmd
+++ b/handouts/00_P_Introduction_and_Syllabus.Rmd
@@ -7,6 +7,8 @@ output:
     template: template.tex
     # keep_tex: true
 geometry: margin=1in,headsep=.2in
+params: 
+  key: false
 ---
 
 ```{r setup, include=FALSE}
