--- a/handouts/01.3_Scenarios_Hypotheses.Rmd
+++ b/handouts/01.3_Scenarios_Hypotheses.Rmd
@@ -7,6 +7,8 @@ output:
     template: template.tex
     # keep_tex: true
 geometry: margin=1in,headsep=.2in
+params: 
+  key: false
 ---
 
 Below are 5 practice problems. For each problem, write the hypotheses (null and alternative) in symbols. 
